Add requirements for opencv-python and numpy; update import path for ConfigManager

--- a/init.yaml
+++ b/init.yaml
@@ -1,4 +1,5 @@
 version: 0.0.1
 folder_path: plugins/webcam_plugin
 type: plugin
-requirements: []
+requirements: 
+  - https://github.com/AI-Driven-Highspeed-Development/Config-Manager.git
